--- a/config files/grek/config.cfg
+++ b/config files/grek/config.cfg
@@ -2,10 +2,9 @@
 // Add custom configurations to the file "userconfig.cfg".
 
 unbindall
-bind "TAB" "+showscores"
-bind "ENTER" "+attack"
+bind "TAB" "+showscores; cl_righthand 1;"
 bind "ESCAPE" "cancelselect"
-bind "SPACE" "drop"
+bind "SPACE" "+jump"
 bind "'" "+moveup"
 bind "+" "sizeup"
 bind "," "buyammo1"
@@ -25,97 +24,91 @@ bind "9" "slot9"
 bind ";" "+mlook"
 bind "=" "sizeup"
 bind "[" "invprev"
-bind "]" "invnext"
 bind "`" "toggleconsole"
 bind "a" "+moveleft"
 bind "b" "buy"
-bind "c" "radio3"
+bind "c" "say CorJlaCeH"
 bind "d" "+moveright"
-bind "e" "+use"
-bind "f" "+voicerecord"
+bind "e" "+silentdefuse"
+bind "f" "say /me  AIMPOWER FAN"
 bind "g" "drop"
-bind "h" "+commandmenu"
-bind "i" "showbriefing"
-bind "k" "exec config.cfg"
+bind "k" "+voicerecord"
 bind "m" "chooseteam"
-bind "n" "nightvision"
 bind "o" "buyequip"
 bind "q" "lastinv"
 bind "r" "+reload"
 bind "s" "+back"
-bind "t" "impulse 201"
 bind "u" "messagemode2"
+bind "v" "say aHAHAHAaha"
 bind "w" "+forward"
-bind "x" "radio2"
+bind "x" "say yasno"
 bind "y" "messagemode"
-bind "z" "radio1"
+bind "z" "say zatknis'"
 bind "~" "toggleconsole"
 bind "UPARROW" "+forward"
 bind "DOWNARROW" "+back"
 bind "LEFTARROW" "+left"
 bind "RIGHTARROW" "+right"
-bind "ALT" "+strafe"
 bind "CTRL" "+duck"
 bind "SHIFT" "+speed"
-bind "F1" "m4a1; ak47; primammo; vesthelm; vest; defuser"
-bind "F2" "awp; primammo; deagle; secammo"
-bind "F3" "galil; famas; primammo"
-bind "F4" "flash; hegren; flash; sgren"
-bind "F5" "snapshot"
-bind "F10" "quit"
+bind "F1" "autobuy"
+bind "F3" "flash"
+bind "F4" "hegren"
+bind "F5" "defuser"
+bind "F6" "awp"
+bind "F8" "snapshot"
 bind "INS" "+klook"
 bind "PGDN" "+lookdown"
 bind "PGUP" "+lookup"
-bind "END" "force_centerview"
-bind "MWHEELDOWN" "+jump"
+bind "END" "centerview"
+bind "MWHEELDOWN" "+duck"
 bind "MWHEELUP" "+jump"
 bind "MOUSE1" "+attack"
 bind "MOUSE2" "+attack2"
-bind "MOUSE4" "unbind"
 bind "PAUSE" "pause"
-_cl_autowepswitch "0"
+_cl_autowepswitch "1"
 _snd_mixahead "0.1"
 ati_npatch "0"
 bgmvolume "1.000000"
-bottomcolor "6YRVBzcTRYG"
-brightness "2"
+bottomcolor "6"
+brightness "3"
 cl_allowdownload "1"
 cl_allowupload "1"
 cl_backspeed "400"
 cl_cmdbackup "2"
-cl_cmdrate "102"
+cl_cmdrate "105"
 cl_corpsestay "600.000000"
-cl_crosshair_color "50 250 50"
-cl_crosshair_size "small"
-cl_crosshair_translucent "1"
-cl_dlmax "512"
+cl_crosshair_color "50 50 250"
+cl_crosshair_size "medium"
+cl_crosshair_translucent "0"
+cl_dlmax "128"
 cl_download_ingame "1"
 cl_dynamiccrosshair "0"
 cl_forwardspeed "400"
 cl_himodels "0"
 cl_idealpitchscale "0.8"
 cl_lc "1"
-cl_logocolor "#Valve_Ltblue"
-cl_logofile "devl1"
+cl_logocolor "#Valve_Orange"
+cl_logofile "lambda"
 cl_lw "1"
-cl_min_ct "2"
-cl_min_t "1"
+cl_min_ct "4"
+cl_min_t "5"
 cl_minmodels "0"
 cl_mousegrab "1"
-cl_radartype "0"
+cl_radartype "1"
 cl_righthand "1"
 cl_shadows "1"
 cl_sidespeed "400"
-cl_timeout "9999"
+cl_timeout "300"
 cl_updaterate "102"
 cl_vsmoothing "0.05"
-cl_weather "0"
-con_color "255 255 255"
+cl_weather "1"
+con_color "255 180 30"
 con_mono "0"
 console "1.000000"
-crosshair "1.000000"
+crosshair "1"
 fastsprites "0"
-fps_max "99.5"
+fps_max "101"
 gamma "3"
 gl_dither "1"
 gl_flipmatrix "0"
@@ -125,7 +118,7 @@ gl_overbright "0"
 gl_polyoffset "0.1"
 gl_vsync "0"
 hisound "1"
-hpk_maxsize "4"
+hpk_maxsize "0.01"
 hud_capturemouse "1"
 hud_centerid "1"
 hud_draw "1"
@@ -133,47 +126,48 @@ hud_fastswitch "1"
 hud_saytext_internal "1"
 hud_takesshots "0"
 joystick "0"
-lookspring "0"
-lookstrafe "0"
+lookspring "0.000000"
+lookstrafe "0.000000"
 m_customaccel "0"
 m_customaccel_exponent "1"
 m_customaccel_max "0"
-m_customaccel_scale "0"
+m_customaccel_scale "0.04"
 m_filter "0"
 m_forward "1"
-m_mousethread_sleep "1"
+m_mousethread_sleep "10"
 m_pitch "0.022"
 m_rawinput "0"
 m_side "0.8"
 m_yaw "0.022"
-model "gordon"
-MP3FadeTime "2.0"
-MP3Volume "0"
-mp_decals "300.000000"
-name "propoganda 4itov"
+model "arctic"
+MP3FadeTime "0.0"
+MP3Volume "0.00000"
+mp_decals "0.000000"
+name "Fanat GREK SHOW"
 net_graph "0"
 net_graphpos "2"
 net_scale "5"
 r_detailtextures "0"
-sensitivity "1.454"
+sensitivity "2.80"
 skin ""
-spec_autodirector_internal "1"
+spec_autodirector_internal "0"
 spec_drawcone_internal "1"
 spec_drawnames_internal "1"
 spec_drawstatus_internal "1"
 spec_mode_internal "4"
 spec_pip "0"
 suitvolume "0.250000"
-sv_aim "1"
+sv_aim "0"
 sv_voiceenable "1"
 team ""
 topcolor "30"
-viewsize "120.000000"
+viewsize "110"
 voice_enable "1"
 voice_forcemicrecord "1"
 voice_modenable "1"
-voice_scale "2"
-volume ".2"
+voice_scale "0.750000"
+volume "1.320000"
+setinfo "vgui_menus" "0"
 setinfo "_vgui_menus" "0"
 setinfo "_ah" "0"
 +mlook
